# 3Dviewer

./: README.md
src/: Makefile
src/backend/: 3d_viewer.h  parsing.c
src/backend/tests/: main_tests.c  tests.c  tests.h
src/documentation/: Doxyfile
src/frontend/3DViewer/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  myopenglwidget.cpp  myopenglwidget.h
src/frontend/3DViewer/QtGifImage/giflib/: gifalloc.c
